Fix blobs on iOS macOS

--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ body {
 }
 
 .blob-hero-container p {
-	text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+	text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
 .blob-hero-blob {
@@ -152,7 +152,7 @@ body {
 .blob-hero-container .blob-hero-card {
 	/* background: rgba(255, 255, 255, 0.15); */
 	background: linear-gradient(230deg, rgb(255, 255, 255, 0.1) 0%, rgb(255, 255, 255, .3) 100%);
-	box-shadow: 0 8px 32px 0 rgba(59, 63, 75, 0.704);
+	box-shadow: 0 8px 15px 0px rgba(33, 26, 158, 0.704);
 	
 	padding: 13px 60px;
 	border: 1px solid rgba(255, 255, 255, 0.455);
@@ -163,6 +163,8 @@ body {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
+
+	z-index: 10;
 	
 	pointer-events: none;
 }
@@ -170,7 +172,7 @@ body {
 .blob-hero-card h1 {
 	color: white;
 	font-size: 2.7rem;
-	text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
+	text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.7);
 	font-weight: 300;
 }
 
@@ -178,7 +180,7 @@ body {
 .blob-hero-card h2 {
 	color: white;
 	font-weight: 100;
-	text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.7);
+	text-shadow: 0px 3px 0px rgba(0, 0, 0, 0.7);
 }
 
 .blob-hero-card .btn {
